fluxcd/clusters/pi/home/prowlarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: home
  labels:
    app: prowlarr
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      name: prowlarr
      namespace: home
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:1.37.0

          resources:
            requests:
              memory: "300Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "300m"

          ports:
            - containerPort: 9696
              name: prowlarr-port

          volumeMounts:
            - name: prowlarr-configs
              mountPath: /config

      volumes:
        - name: prowlarr-configs
          persistentVolumeClaim:
            claimName: prowlarr-configs-local
