fluxcd/clusters/pi/home/prowlarr/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: home
  labels:
    app: prowlarr
spec:
  serviceName: prowlarr
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      name: prowlarr
      namespace: home
      labels:
        app: prowlarr
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.4.0
          ports:
            - containerPort: 9696
              name: prowlarr-port
          resources:
            requests:
              memory: "300Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "300m"
          volumeMounts:
            - name: prowlarr-configs
              mountPath: /config
  volumeClaimTemplates:
    - metadata:
        name: prowlarr-configs
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 200Mi
