fluxcd/clusters/pi/home/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: home
spec:
  selector:
    app: prowlarr
  ports:
    - name: prowlarr-port
      port: 80
      targetPort: prowlarr-port
