fluxcd/clusters/pi/home/prowlarr/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingress-route
  namespace: home
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.prowlarr.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: prowlarr
          port: 80
    - match: Host(`prowlarr.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: prowlarr
          port: 80
      # middlewares:
      #   - name: default-headers
  tls:
    secretName: local-fellowfreak-dev-production-tls
